--- a/bytebank/src/app/app.component.html
+++ b/bytebank/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
-  <a routerLink="extrato"></a>
-  <a routerLink="nova-transferencia"></a>
+  <a routerLink="extrato">Extrato</a>
+  <a routerLink="nova-transferencia">Nova Transferencia</a>
 </header>
 
 <main>
