--- a/bytebank/src/app/app.component.html
+++ b/bytebank/src/app/app.component.html
@@ -1,4 +1,8 @@
-<app-nova-transferencia></app-nova-transferencia>
+<header>
+  <a routerLink="extrato"></a>
+  <a routerLink="nova-transferencia"></a>
+</header>
 
-<app-extrato></app-extrato>
-
+<main>
+  <router-outlet></router-outlet>
+</main>
