--- a/gatitobook/src/app/home/login/login.component.html
+++ b/gatitobook/src/app/home/login/login.component.html
@@ -1,4 +1,4 @@
-<h4 class="tex-center">Login</h4>
+<h4 class="text-center">Login</h4>
 <form class="form mt-4" (ngSubmit)="login()">
   <div class="form-group">
     <input type="text" class="form-control" placeholder="Nome do Usuário" [(ngModel)]="usuario" name="usuario" />
