--- a/gatitobook/src/app/home/login/login.component.html
+++ b/gatitobook/src/app/home/login/login.component.html
@@ -1,44 +1,11 @@
 <h4 class="text-center">Login</h4>
-
-<form class="form mt-4" (ngSubmit)="login()" #loginForm="ngForm">
+<form class="form mt-4" (ngSubmit)="login()">
   <div class="form-group">
-    <input
-      class="form-control"
-      placeholder="Nome do usuário"
-      [(ngModel)]="usuario"
-      name="usuario"
-      #campoUsuario="ngModel"
-      required
-    />
-    <app-mensagem
-      *ngIf="campoUsuario.invalid && campoUsuario.touched"
-      mensagem="Usuário obrigatório"
-    ></app-mensagem>
+    <input type="text" class="form-control" placeholder="Nome do Usuário" [(ngModel)]="usuario" name="usuario" />
+  </div>
+  <div class="form-group">
+    <input type="password" class="form-control" placeholder="Senha" [(ngModel)]="senha" name="senha">
   </div>
 
-  <div class="form-group">
-    <input
-      type="password"
-      class="form-control"
-      placeholder="Senha"
-      [(ngModel)]="senha"
-      name="senha"
-      #campoSenha="ngModel"
-      required
-    />
-    <app-mensagem
-      *ngIf="campoSenha.invalid && campoSenha.touched"
-      mensagem="Senha obrigatória"
-    ></app-mensagem>
-  </div>
-
-  <button
-    type="submit"
-    class="btn btn-primary btn-block"
-    [disabled]="loginForm.invalid"
-  >
-    Login
-  </button>
+  <button type="submit" class="btn btn-primary btn-block">Login</button>
 </form>
-
-<p>Não é um usuário?<a [routerLink]="['novousuario']">Se cadastre!</a></p>
