--- a/gatitobook/src/app/home/login/login.component.html
+++ b/gatitobook/src/app/home/login/login.component.html
@@ -3,6 +3,7 @@
   <div class="form-group">
     <input type="text" class="form-control" placeholder="Nome do Usuário" [(ngModel)]="usuario" name="usuario" />
   </div>
+  <app-mensagem mensagem="Usuario obrigatorio"></app-mensagem>
   <div class="form-group">
     <input type="password" class="form-control" placeholder="Senha" [(ngModel)]="senha" name="senha">
   </div>
