--- a/gatitobook/src/app/animais/detalhe-animal/comentarios/comentarios.component.html
+++ b/gatitobook/src/app/animais/detalhe-animal/comentarios/comentarios.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="comentarios$ | async as comentarios">
-  <ul class="list-unstyled">
+  <ul class="list-unstyled comentario-list">
     <li *ngFor="let comentario of comentarios">
       <p class="text-dark font-weight-bold mr-1">{{ comentario.userName }}</p>
       <em>{{ comentario.date | date:"dd-MM-yyyy HH:mm"}}</em>
@@ -11,19 +11,14 @@
     <form [formGroup]="comentarioForm" (submit)="gravar()">
       <div class="input-group">
         <textarea class="form-control" formControlName="comentario"></textarea>
-        <div class="input-group-append">
+        <div class="input-group-append input-group mt-1 mb-1">
           <button [disabled]="comentarioForm.invalid" class="btn btn-primary pull-left">
             Publicar
           </button>
         </div>
       </div>
-      <app-mensagem *ngIf="" ></app-mensagem>
-
-
-
       <app-mensagem mensagem="Tamanho máximo de 300 caracteres"
       *ngIf="!!comentarioForm.get('comentario')?.errors?.['maxLength']" > </app-mensagem>
-
 
     </form>
   </div>
